# AI-Customer-Support-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
Backend/: app.py  database.py  models.py  seed.py
Backend/agents/: refund_agent.py
Backend/graphs/: nodes.py  refund_graph.py  state.py
Backend/routes/: customer.py  order.py  policy.py  refund.py
Backend/schemas/: refund_schema.py
Backend/services/: customer_service.py  order_service.py  policy_service.py
Backend/tools/: customer_tool.py  order_tool.py  policy_tool.py  refund_tool.py
Data/: customers.csv  orders.csv  refund_policy.txt
Database/: init_db.py  test_db.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: DashboardStats.jsx  DecisionCard.jsx  LogsTable.jsx  Navbar.jsx  RefundForm.jsx  TracePanel.jsx
Frontend/src/dashboard/: AdminDashboard.jsx
Frontend/src/hooks/: useLogs.js  useRefund.js
Frontend/src/pages/: CustomerChat.jsx
Test/: debug.py  test_agent.py  test_graph.py  test_services.py  test_tools.py
