[project]
name = "ai-custom-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
